--- a/MailMergeTestApp/MailMergeTestApp.csproj
+++ b/MailMergeTestApp/MailMergeTestApp.csproj
@@ -2,9 +2,19 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DocxToPdf\DocxToPdf.csproj" />
+    <ProjectReference Include="..\MailMerge.Business\MailMerge.Business.csproj" />
+    <ProjectReference Include="..\OpenXmlMailMerge\OpenXmlMailMerge.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="output\" />
+  </ItemGroup>
 
 </Project>
