--- a/AsposeWords/AsposeWords.csproj
+++ b/AsposeWords/AsposeWords.csproj
@@ -7,9 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
-    <PackageReference Include="PdfSharpCore" Version="1.3.67" />
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.4" />
+    <PackageReference Include="Aspose.Words" Version="25.5.0" />
   </ItemGroup>
 
 </Project>
