--- a/AsposeWords/AsposeWords.csproj
+++ b/AsposeWords/AsposeWords.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspose.Cells" Version="25.5.0" />
+    <PackageReference Include="Aspose.PDF" Version="25.4.0" />
     <PackageReference Include="Aspose.Words" Version="25.5.0" />
   </ItemGroup>
 
