--- a/DocEngine.AsposeWords/DocEngine.AsposeWords.csproj
+++ b/DocEngine.AsposeWords/DocEngine.AsposeWords.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Aspose.Words" Version="25.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DocEngine.Data\DocEngine.Data.csproj" />
+  </ItemGroup>
+
 </Project>
