--- a/DocEngine.Processor/DocEngine.Processor.csproj
+++ b/DocEngine.Processor/DocEngine.Processor.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DocEngine.Data\DocEngine.Data.csproj" />
+    <ProjectReference Include="..\DocEngine.MailMerge\DocEngine.MailMerge.csproj" />
+  </ItemGroup>
+
 </Project>
