--- a/DocEngine.Processor/DocEngine.Processor.csproj
+++ b/DocEngine.Processor/DocEngine.Processor.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
     <PackageReference Include="PdfSharpCore" Version="1.3.67" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.5" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.4" />
   </ItemGroup>
 
