--- a/DocEngine.TestClient/DocEngine.TestClient.csproj
+++ b/DocEngine.TestClient/DocEngine.TestClient.csproj
@@ -51,4 +51,10 @@
     <ProjectReference Include="..\DocEngine.XceedUtils\DocEngine.XceedUtils.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
