--- a/DocEngine.Data/DocEngine.Data.csproj
+++ b/DocEngine.Data/DocEngine.Data.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.3" />
+    <PackageReference Include="NameGenerator" Version="2.0.4" />
+  </ItemGroup>
+
 </Project>
