--- a/DocEngine.MailMerge/DocEngine.MailMerge.csproj
+++ b/DocEngine.MailMerge/DocEngine.MailMerge.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
+    <PackageReference Include="NLog" Version="5.4.0" />
   </ItemGroup>
 
 </Project>
