--- a/DocEngine.Processor/DocEngine.Processor.csproj
+++ b/DocEngine.Processor/DocEngine.Processor.csproj
@@ -8,9 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
+    <PackageReference Include="Ghostscript.Core.NET" Version="1.0.0" />
+    <PackageReference Include="Ghostscript.NET" Version="1.3.0" />
     <PackageReference Include="PdfSharpCore" Version="1.3.67" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.5" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.4" />
+    <PackageReference Include="Templater" Version="8.2.0" />
   </ItemGroup>
 
   <ItemGroup>
